2006-08-31  Guillaume Smet <guillaume-pg@smet.org>

	* reworked everything in prepared statements support for current
	CVS tip
	* fixed a bug in history listener: queries were not ordered
	correctly if their timestamps were identical

2006-08-28  Guillaume Smet <guillaume-pg@smet.org>

	* added support for prepared statements (including CVS tip bind
	parameters)

2006-08-17  Guillaume Smet <guillaume-pg@smet.org>

	* released 0.7

2006-08-16  Guillaume Smet <guillaume-pg@smet.org>

	* [vacuum] fixed elapsed time calculation. The problem
	was due to inconsistency in PostgreSQL code.

2006-08-11  Guillaume Smet <guillaume.smet@openwide.fr>

	* fixed [#1000703] reported by Jérôme Benois

2006-08-10  Guillaume Smet <guillaume-pg@smet.org>

	* updated RPM packaging for 0.7

2006-08-09  Guillaume Smet <guillaume-pg@smet.org>

	* [vacuum] fixed the FSM report if we don't find any
	FSM information
	* [vacuum] minor cosmetic fixes

2006-08-08  Guillaume Smet <guillaume-pg@smet.org>

	* fixed unit tests

2006-08-07  Guillaume Smet <guillaume-pg@smet.org>

	* [tsung] completed Tsung support

2006-08-06  Guillaume Smet <guillaume-pg@smet.org>

	* [tsung] began the work on Tsung sessions generator

2006-08-03  Guillaume Smet <guillaume-pg@smet.org>

	* [vacuum] improved the layout
	* [vacuum] fixed the default sort order to work also
	for simple VACUUM
	* [vacuum] added the CPU usage

2006-08-02  Guillaume Smet <guillaume-pg@smet.org>

	* [vacuum] added the duration information
	* [vacuum] added a detailed report

2006-08-02  Open Wide <guillaume.smet@openwide.fr>

	* [vacuum] fixed a bug in database/schema filter

2006-07-26  Guillaume Smet <guillaume-pg@smet.org>

	* added a few hints if pgFouine does not find any valid
	PostgreSQL log line

2006-07-25  Guillaume Smet <guillaume-pg@smet.org>

	* changed the default order for vacuumed tables report
	* added the ability to filter vacuum log analysis on
	database and schema

2006-07-24  Guillaume Smet <guillaume-pg@smet.org>
